--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       <h1>Flatadango Movie Theater</h1>
     </header>
     <main>
+      <section id="movie-menu">
+        <h2>All Movies</h2>
+        <ul id="films">
+          <li class="film item"></li>
+        </ul>
+      </section>
       <section id="movie-list">
         <h2>Upcoming Movies</h2>
         <!-- Movie cards will be dynamically added here by JavaScript -->
@@ -23,7 +29,7 @@
         </div>
         <div id="booking-summary">
           <p>Selected Seats: <span id="selected-seats-display"></span></p>
-          <p>Total Price: $<span id="total-price-display">0</span></p>
+          <p>Total Price: $<span id="total-price-display">10</span></p>
           <button id="confirm-booking-btn">Confirm Booking</button>
         </div>
       </section>
